fix: awkward spacing in HTML documentation

--- a/main/src/resources/doc/styles.css
+++ b/main/src/resources/doc/styles.css
@@ -463,6 +463,7 @@ main h2 {
 .decl {
     display: flex;
     gap: 0.2rem;
+    align-items: center;
 }
 .decl > code {
     flex: 1;
